--- a/Prover.Certificates.View/View/CreateCertificateList.xaml
+++ b/Prover.Certificates.View/View/CreateCertificateList.xaml
@@ -2,17 +2,136 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:Prover.Certificates.View.ViewModels"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             Foreground="{DynamicResource HeaderColour}"
              d:DesignHeight="300"
-             d:DesignWidth="300"
+             d:DesignWidth="506"
              mc:Ignorable="d">
-    <UserControl.Resources />
+
+
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="Instruments" Source="{Binding Path=Instruments, Mode=OneWay}" />
+        <DataTemplate x:Key="inst">
+            <StackPanel Orientation="Horizontal">
+                <Image />
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Width="125"
+                               Foreground="White"
+                               Text="{Binding InstrumentType}" />
+                    <TextBlock Width="125"
+                               Margin="2"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               FontSize="22"
+                               Foreground="White"
+                               Text="{Binding SerialNumber}" />
+                </StackPanel>
+                <Grid Height="50"
+                      Margin="2"
+                      DataContext="{Binding}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Orientation="Horizontal">
+                        <TextBlock Foreground="White" Text="{Binding CreatedDate}" />
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" />
+                    <StackPanel Grid.Row="2" Orientation="Horizontal">
+                        <TextBlock Foreground="White" Text="I.C. #: " />
+                        <TextBlock Foreground="White" Text="{Binding IC}" />
+                    </StackPanel>
+                    <StackPanel Grid.Row="3" Orientation="Horizontal">
+                        <TextBlock Foreground="White" Text="Drive Type: " />
+                        <TextBlock Foreground="White" Text="{Binding InstrumentDriveType}" />
+                    </StackPanel>
+                </Grid>
+                <Grid />
+            </StackPanel>
+        </DataTemplate>
+        <Style x:Key="InstrumentStyle" TargetType="{x:Type ListBoxItem}">
+            <Setter Property="IsSelected" Value="{Binding Path=SelectedInstrument, Mode=TwoWay}" />
+            <Style.Triggers>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="ItemsControl.AlternationIndex" Value="1" />
+                        <Condition Property="IsSelected" Value="False" />
+                        <Condition Property="IsMouseOver" Value="False" />
+                    </MultiTrigger.Conditions>
+                    <Setter Property="Background" Value="#EEEEEEEE" />
+                </MultiTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="Flat">
+            <Setter Property="Control.Background" Value="{x:Null}" />
+            <Setter Property="Control.BorderBrush" Value="{x:Null}" />
+            <Style.Triggers>
+                <Trigger Property="Control.IsMouseOver" Value="True">
+                    <Setter Property="Control.Background" Value="{x:Null}" />
+                    <Setter Property="Control.BorderBrush" Value="{x:Null}" />
+                    <Setter Property="Control.FontWeight" Value="Bold" />
+                </Trigger>
+                <Trigger Property="Control.IsFocused" Value="True">
+                    <Setter Property="Control.FontWeight" Value="Bold" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="2*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="9*" />
+
         </Grid.RowDefinitions>
-        <WrapPanel Grid.Row="0" />
-        <ListBox Grid.Row="1" />
+
+        <StackPanel Grid.Row="0"
+                    Margin="10, 0, 0, 0"
+                    Orientation=" Horizontal">
+            <Button Command="{Binding OneWeekFilterCommand}"
+                    Content="Last 7 Days"
+                    Style="{DynamicResource SimpleButton}" />
+            <Button Command="{Binding OneMonthFilterCommand}"
+                    Content="Last 30 Days"
+                    Style="{DynamicResource SimpleButton}" />
+
+            <!--  <TextBlock HorizontalAlignment="Right">Serial Number:</TextBlock>  -->
+        </StackPanel>
+        <TextBox x:Name="SerialNumber"
+                 Width="125"
+                 Margin="0,0,10,0"
+                 HorizontalAlignment="Right"
+                 FontSize="26.667"
+                 Text="{Binding SerialNumber,
+                                UpdateSourceTrigger=PropertyChanged}" />
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <ListBox x:Name="InstrumentList"
+                     Margin="10"
+                     HorizontalContentAlignment="Stretch"
+                     VerticalContentAlignment="Stretch"
+                     Background="{DynamicResource MainBackgroundColour}"
+                     BorderBrush="{DynamicResource HeaderColour}"
+                     BorderThickness="1"
+                     ItemContainerStyle="{StaticResource InstrumentStyle}"
+                     ItemTemplate="{StaticResource ResourceKey=inst}"
+                     ItemsSource="{Binding Source={StaticResource Instruments}}"
+                     SelectedItem="{Binding DataContext.SelectedInstrument,
+                                            ElementName=InstrumentsList,
+                                            Mode=TwoWay}" />
+
+            <!--  Details  -->
+            <!--
+                <views:InstrumentDetails Grid.Column="2"
+                Margin="10"
+                DataContext="{Binding DataContext.SelectedInstrument}" />
+            -->
+        </Grid>
     </Grid>
 </UserControl>
+
