--- a/Prover.Certificates.View/View/CreateCertificatesView.xaml
+++ b/Prover.Certificates.View/View/CreateCertificatesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CreateCertificateList"
+﻿<UserControl x:Class="CreateCertificatesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,6 +15,7 @@
         <DataTemplate x:Key="inst">
             <StackPanel Orientation="Horizontal">
                 <Image />
+                <CheckBox />
                 <StackPanel Orientation="Vertical">
                     <TextBlock Width="125"
                                Foreground="White"
@@ -81,7 +82,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Background="{DynamicResource MainBackgroundColour}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="9*" />
@@ -100,24 +101,18 @@
 
             <!--  <TextBlock HorizontalAlignment="Right">Serial Number:</TextBlock>  -->
         </StackPanel>
-        <TextBox x:Name="SerialNumber"
-                 Width="125"
-                 Margin="0,0,10,0"
-                 HorizontalAlignment="Right"
-                 FontSize="26.667"
-                 Text="{Binding SerialNumber,
-                                UpdateSourceTrigger=PropertyChanged}" />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="4*" />
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <ListBox x:Name="InstrumentList"
+                     Grid.Column="0"
                      Margin="10"
                      HorizontalContentAlignment="Stretch"
                      VerticalContentAlignment="Stretch"
                      Background="{DynamicResource MainBackgroundColour}"
-                     BorderBrush="{DynamicResource HeaderColour}"
-                     BorderThickness="1"
+                     BorderThickness="0"
                      ItemContainerStyle="{StaticResource InstrumentStyle}"
                      ItemTemplate="{StaticResource ResourceKey=inst}"
                      ItemsSource="{Binding Source={StaticResource Instruments}}"
@@ -125,13 +120,12 @@
                                             ElementName=InstrumentsList,
                                             Mode=TwoWay}" />
 
-            <!--  Details  -->
-            <!--
-                <views:InstrumentDetails Grid.Column="2"
-                Margin="10"
-                DataContext="{Binding DataContext.SelectedInstrument}" />
-            -->
+            <!--  Certificate Information  -->
+            <Grid Grid.Column="1">
+                <StackPanel>
+                    <Button Content="Create New Certificate" />
+                </StackPanel>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
-
