--- a/Prover.Certificates.View/View/CreateCertificatesView.xaml
+++ b/Prover.Certificates.View/View/CreateCertificatesView.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Prover.Certificates.View.ViewModels"
+             xmlns:local="clr-namespace:Prover.Certificates.View"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              Foreground="{DynamicResource HeaderColour}"
              d:DesignHeight="300"
@@ -11,11 +11,11 @@
 
 
     <UserControl.Resources>
-        <CollectionViewSource x:Key="Instruments" Source="{Binding Path=Instruments, Mode=OneWay}" />
+        <CollectionViewSource x:Key="Instruments" Source="{Binding Path=Instruments, Mode=TwoWay}" />
         <DataTemplate x:Key="inst">
-            <StackPanel Orientation="Horizontal">
+            <StackPanel DataContext="{Binding Path=Instrument}" Orientation="Horizontal">
                 <Image />
-                <CheckBox />
+
                 <StackPanel Orientation="Vertical">
                     <TextBlock Width="125"
                                Foreground="White"
@@ -38,23 +38,23 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
-                        <TextBlock Foreground="White" Text="{Binding CreatedDate}" />
+                        <TextBlock Foreground="White" Text="{Binding Instrument.CreatedDate}" />
                     </StackPanel>
                     <StackPanel Grid.Row="1" Orientation="Horizontal" />
                     <StackPanel Grid.Row="2" Orientation="Horizontal">
                         <TextBlock Foreground="White" Text="I.C. #: " />
-                        <TextBlock Foreground="White" Text="{Binding IC}" />
+                        <TextBlock Foreground="White" Text="{Binding Instrument.IC}" />
                     </StackPanel>
                     <StackPanel Grid.Row="3" Orientation="Horizontal">
                         <TextBlock Foreground="White" Text="Drive Type: " />
-                        <TextBlock Foreground="White" Text="{Binding InstrumentDriveType}" />
+                        <TextBlock Foreground="White" Text="{Binding Instrument.InstrumentDriveType}" />
                     </StackPanel>
                 </Grid>
                 <Grid />
             </StackPanel>
         </DataTemplate>
         <Style x:Key="InstrumentStyle" TargetType="{x:Type ListBoxItem}">
-            <Setter Property="IsSelected" Value="{Binding Path=SelectedInstrument, Mode=TwoWay}" />
+            <Setter Property="IsSelected" Value="{Binding Path=IsSelected, Mode=TwoWay}" />
             <Style.Triggers>
                 <MultiTrigger>
                     <MultiTrigger.Conditions>
@@ -80,6 +80,9 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style TargetType="{x:Type ListBoxItem}">
+            <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
+        </Style>
     </UserControl.Resources>
 
     <Grid Background="{DynamicResource MainBackgroundColour}">
@@ -97,6 +100,12 @@
                     Style="{DynamicResource SimpleButton}" />
             <Button Command="{Binding OneMonthFilterCommand}"
                     Content="Last 30 Days"
+                    Style="{DynamicResource SimpleButton}" />
+            <Button Command="{Binding MiniMaxFilterCommand}"
+                    Content="Mini Max"
+                    Style="{DynamicResource SimpleButton}" />
+            <Button Command="{Binding EC300FilterCommand}"
+                    Content="EC 300"
                     Style="{DynamicResource SimpleButton}" />
 
             <!--  <TextBlock HorizontalAlignment="Right">Serial Number:</TextBlock>  -->
@@ -116,14 +125,14 @@
                      ItemContainerStyle="{StaticResource InstrumentStyle}"
                      ItemTemplate="{StaticResource ResourceKey=inst}"
                      ItemsSource="{Binding Source={StaticResource Instruments}}"
-                     SelectedItem="{Binding DataContext.SelectedInstrument,
-                                            ElementName=InstrumentsList,
-                                            Mode=TwoWay}" />
+                     SelectionMode="Multiple" />
 
             <!--  Certificate Information  -->
             <Grid Grid.Column="1">
                 <StackPanel>
-                    <Button Content="Create New Certificate" />
+                    <Button Command="{Binding Path=CreateNewCertCommand}" Content="Create New Certificate" />
+                    <TextBlock>Created By:</TextBlock>
+                    <TextBox Text="{Binding Path=CreatedBy}" />
                 </StackPanel>
             </Grid>
         </Grid>
