--- a/Prover.Certificates.View/View/CertificateReport.xaml
+++ b/Prover.Certificates.View/View/CertificateReport.xaml
@@ -1,6 +1,6 @@
 ﻿<FlowDocument xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    ColumnWidth="400" FontSize="14" FontFamily="Georgia">
-    <Paragraph>
-        
-    </Paragraph>
+              ColumnWidth="400"
+              FontFamily="Georgia"
+              FontSize="14">
+    <Paragraph />
 </FlowDocument>
